--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack",
-    "dev:server": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open"
   },
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
     "postcss": "^8.1.1",
+    "postcss-custom-media": "^7.0.8",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^4.0.3",
+    "postcss-mixins": "^7.0.1",
     "postcss-nested": "^5.0.1",
+    "postcss-preset-env": "^6.7.0",
     "postcss-simple-vars": "^6.0.1",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
