--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open"
   },
-  "dependencies": {},
+  "dependencies": {
+    "colcade": "^0.2.0"
+  },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
